Fix on patient info avatar squished

--- a/telehance-dashboard/src/main/Components/PatientInfo/PatientInfo.module.css
+++ b/telehance-dashboard/src/main/Components/PatientInfo/PatientInfo.module.css
@@ -29,6 +29,10 @@
   min-height: 100px;
 }
 
+.patient > span > img {
+  object-fit: cover;
+}
+
 .patient > div > h4 {
   font-weight: 700;
   margin-bottom: 0.5em;
